@@ -1,4 +1,9 @@
 /*
+  Copyright 2005 by Easy Software Products
+
+  This header file defines private APIs and should not be used in
+  CUPS-based applications.
+
   Copyright (C) 1999 Aladdin Enterprises.  All rights reserved.
 
   This software is provided 'as-is', without any express or implied
@@ -40,55 +45,30 @@
   1999-05-03 lpd Original version.
  */
 
-#ifndef md5_INCLUDED
-#  define md5_INCLUDED
-
-/*
- * This code has some adaptations for the Ghostscript environment, but it
- * will compile and run correctly in any environment with 8-bit chars and
- * 32-bit ints.  Specifically, it assumes that if the following are
- * defined, they have the same meaning as in Ghostscript: P1, P2, P3,
- * ARCH_IS_BIG_ENDIAN.
- */
-
-typedef unsigned char md5_byte_t; /* 8-bit byte */
-typedef unsigned int md5_word_t; /* 32-bit word */
+#ifndef _CUPS_MD5_H_
+#  define _CUPS_MD5_H_
 
 /* Define the state of the MD5 Algorithm. */
-typedef struct md5_state_s {
-    md5_word_t count[2];	/* message length in bits, lsw first */
-    md5_word_t abcd[4];		/* digest buffer */
-    md5_byte_t buf[64];		/* accumulate block */
-} md5_state_t;
+typedef struct _cups_md5_state_s {
+    unsigned int count[2];		/* message length in bits, lsw first */
+    unsigned int abcd[4];		/* digest buffer */
+    unsigned char buf[64];		/* accumulate block */
+} _cups_md5_state_t;
 
-#ifdef __cplusplus
-extern "C" 
-{
-#endif
+#  ifdef __cplusplus
+extern "C" {
+#  endif /* __cplusplus */
 
 /* Initialize the algorithm. */
-#ifdef P1
-void md5_init(P1(md5_state_t *pms));
-#else
-void md5_init(md5_state_t *pms);
-#endif
+void _cups_md5_init(_cups_md5_state_t *pms);
 
 /* Append a string to the message. */
-#ifdef P3
-void md5_append(P3(md5_state_t *pms, const md5_byte_t *data, int nbytes));
-#else
-void md5_append(md5_state_t *pms, const md5_byte_t *data, int nbytes);
-#endif
+void _cups_md5_append(_cups_md5_state_t *pms, const unsigned char *data, int nbytes);
 
 /* Finish the message and return the digest. */
-#ifdef P2
-void md5_finish(P2(md5_state_t *pms, md5_byte_t digest[16]));
-#else
-void md5_finish(md5_state_t *pms, md5_byte_t digest[16]);
-#endif
+void _cups_md5_finish(_cups_md5_state_t *pms, unsigned char digest[16]);
 
-#ifdef __cplusplus
+#  ifdef __cplusplus
 }  /* end extern "C" */
-#endif
-
-#endif /* md5_INCLUDED */
+#  endif /* __cplusplus */
+#endif /* !_CUPS_MD5_H_ */
